stryker/Metadata/unpackaged/objects/Connection__c.object
<CustomObject>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Con_Child_Party_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Con Child Party Role</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Con_Party_Role__c</fullName>
        <label>Con Party Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Connection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>